--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap");
+
+*,
+*::after,
+*::before {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  transition: all 300ms ease-in-out;
+  font-family: "Inter", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --orange: hsl(35, 77%, 62%);
+  --red: hsl(5, 85%, 63%);
+
+  --white: hsl(36, 100%, 99%);
+  --gray: hsl(233, 8%, 79%);
+  --gray-dark: hsl(236, 13%, 42%);
+  --dark: hsl(240, 100%, 5%);
+}
+
+body {
+  background-color: var(--white);
+  color: var(--dark);
 }
